--- a/templates/pyshow.html
+++ b/templates/pyshow.html
@@ -109,55 +109,94 @@
                 <option value="Arby's">Arby's</option>
                 <option value="Auntie Anne's">Auntie Anne's</option>
                 <option value="Baskin Robbins">Baskin Robbins</option>
+                <option value="Big Boy/Frisch's Big Boy">Big Boy/Frisch's Big Boy</option>
                 <option value="BJ's Restaurant & Brewhouse">BJ's Restaurant & Brewhouse</option>
                 <option value="Bob Evans">Bob Evans</option>
                 <option value="Bojangles">Bojangles</option>
                 <option value="Bonefish Grill">Bonefish Grill</option>
                 <option value="Buffalo Wild Wings">Buffalo Wild Wings</option>
+                <option value="Burger King">Burger King</option>
                 <option value="California Pizza Kitchen">California Pizza Kitchen</option>
                 <option value="Captain D's">Captain D's</option>
+                <option value="Carls Jr">Carls Jr</option>
                 <option value="Carrabba's Italian Grill">Carrabba's Italian Grill</option>
+                <option value="Casey's General Store">Casey's General Store</option>
                 <option value="Checker's Drive-In/ Rally's">Checker's Drive-In/ Rally's</option>
                 <option value="Cheddar's Casual Café / Cheddar's Scratch Kitchen">Cheddar's Casual Café / Cheddar's Scratch Kitchen</option>
                 <option value="Chick Fil A">Chick Fil A</option>
                 <option value="Chili's">Chili's</option>
                 <option value="Chipotle">Chipotle</option>
                 <option value="Chuck E. Cheese">Chuck E. Cheese</option>
+                <option value="Church's Chicken">Church's Chicken</option>
+                <option value="Ci Ci's">Ci Ci's</option>
                 <option value="Cracker Barrel">Cracker Barrel</option>
                 <option value="Culver's">Culver's</option>
                 <option value="Dairy Queen">Dairy Queen</option>
+                <option value="Del Taco">Del Taco</option>
                 <option value="Denny's">Denny's</option>
+                <option value="Dickey's Barbeque">Dickey's Barbeque</option>
                 <option value="Domino's">Domino's</option>
                 <option value="Dunkin' Donuts">Dunkin' Donuts</option>
+                <option value="Einstein Bros">Einstein Bros</option>
                 <option value="El Pollo Loco">El Pollo Loco</option>
+                <option value="Famous Dave's">Famous Dave's</option>
                 <option value="Firehouse Subs">Firehouse Subs</option>
+                <option value="Five Guys">Five Guys</option>
+                <option value="Golden Corral">Golden Corral</option>
                 <option value="Hardee's">Hardee's</option>
                 <option value="Hooter's">Hooter's</option>
                 <option value="IHOP">IHOP</option>
                 <option value="In-N-Out">In-N-Out</option>
                 <option value="Jack in the Box">Jack in the Box</option>
                 <option value="Jamba Juice">Jamba Juice</option>
+                <option value="Jimmy John's">Jimmy John's</option>
+                <option value="Joe's Crab Shack">Joe's Crab Shack</option>
                 <option value="KFC">KFC</option>
                 <option value="Krispy Kreme">Krispy Kreme</option>
+                <option value="Krystal">Krystal</option>
                 <option value="Little Caesar's">Little Caesar's</option>
+                <option value="Long John Silver's">Long John Silver's</option>
+                <option value="Longhorn Steakhouse">Longhorn Steakhouse</option>
                 <option value="McDonald's">McDonald's</option>
+                <option value="Moe's Southwest Grill">Moe's Southwest Grill</option>
+                <option value="O'Charley's">O'Charley's</option>
                 <option value="Olive Garden">Olive Garden</option>
+                <option value="On The Border">On The Border</option>
                 <option value="Outback Steakhouse">Outback Steakhouse</option>
                 <option value="Panda Express">Panda Express</option>
                 <option value="Panera Bread">Panera Bread</option>
                 <option value="Papa John's">Papa John's</option>
+                <option value="Papa Murphy's">Papa Murphy's</option>
+                <option value="Perkins">Perkins</option>
                 <option value="PF Chang's">PF Chang's</option>
                 <option value="Pizza Hut">Pizza Hut</option>
                 <option value="Popeyes">Popeyes</option>
+                <option value="Portillo's">Portillo's</option>
                 <option value="Qdoba">Qdoba</option>
+                <option value="Quiznos">Quiznos</option>
                 <option value="Raising Cane's Chicken Fingers">Raising Cane's Chicken Fingers</option>
                 <option value="Red Lobster">Red Lobster</option>
                 <option value="Red Robin">Red Robin</option>
+                <option value="Romano's Macaroni & Grill">Romano's Macaroni & Grill</option>
+                <option value="Round Table Pizza">Round Table Pizza</option>
+                <option value="Sbarro">Sbarro</option>
                 <option value="Shake Shack">Shake Shack</option>
                 <option value="Sonic">Sonic</option>
                 <option value="Starbucks">Starbucks</option>
+                <option value="Steak 'N Shake">Steak 'N Shake</option>
+                <option value="Subway">Subway</option>
                 <option value="Taco Bell">Taco Bell</option>
+                <option value="TGI Friday's">TGI Friday's</option>
+                <option value="The Capital Grille">The Capital Grille</option>
                 <option value="The Cheesecake Factory">The Cheesecake Factory</option>
+                <option value="Tropical Smoothie Café">Tropical Smoothie Café</option>
+                <option value="Waffle House">Waffle House</option>
+                <option value="Wendy's">Wendy's</option>
+                <option value="Whataburger">Whataburger</option>
+                <option value="White Castle">White Castle</option>
+                <option value="Wingstop">Wingstop</option>
+                <option value="Yard House">Yard House</option>
+                <option value="Zaxby's">Zaxby's</option>
             </select>
             <button onclick="setRestaurant()">Next</button>
         </div>
