--- a/templates/pyshow.html
+++ b/templates/pyshow.html
@@ -217,6 +217,7 @@
             <button onclick="setCategory('Desserts')">Desserts</button>
             <button onclick="setCategory('Baked Goods')">Baked Goods</button>
             <button onclick="setCategory('Beverages')">Beverages</button>
+            <button onclick="setCategory('Toppings & Ingredients')">Toppings & Ingredients</button>
         </div>
     </div>
 
