--- a/templates/pyshow.html
+++ b/templates/pyshow.html
@@ -227,13 +227,12 @@
             <h2>What's Important To You ?</h2>
             <button onclick="setCriteria('calories')">Calories</button>
             <button onclick="setCriteria('protein')">Protein</button>
-            <button onclick="setCriteria('Fat')">Fat</button>
-            <button onclick="setCriteria('cholestrol')">Cholestrol</button>
+            <button onclick="setCriteria('total_fat')">Fat</button>
+            <button onclick="setCriteria('cholesterol')">Cholesterol</button>
             <button onclick="setCriteria('sodium')">Sodium</button>
             <button onclick="setCriteria('carbohydrates')">Carbs</button>
-            <button onclick="setCriteria('Fiber')">Fiber</button>
-            <button onclick="setCriteria('Sugar')">Sugar</button>
-            <button onclick="setCriteria('Protein')">Protein</button>
+            <button onclick="setCriteria('dietary_fiber')">Fiber</button>
+            <button onclick="setCriteria('sugar')">Sugar</button>
         </div>
     </div>
     <!-- Page 4: Choose Your Level -->
