added units to headings pyshow.html

--- a/templates/pyshow.html
+++ b/templates/pyshow.html
@@ -307,13 +307,13 @@
                     <tr>
                         <th>Food Item</th>
                         <th>Calories</th>
-                        <th>Fat</th>
-                        <th>Cholestrol</th>
-                        <th>Sodium</th>
-                        <th>Carbs</th>
-                        <th>Fiber</th>
-                        <th>Sugar</th>
-                        <th>Protein</th>
+                        <th>Fat (g)</th>
+                        <th>Cholestrol (mg)</th>
+                        <th>Sodium (mg)</th>
+                        <th>Carbs (g)</th>
+                        <th>Fiber (g)</th>
+                        <th>Sugar (g)</th>
+                        <th>Protein (g)</th>
                     </tr>
                 </thead>
                 <tbody id="resultsTable">
