--- a/templates/pyshow.html
+++ b/templates/pyshow.html
@@ -456,7 +456,7 @@
         
 
             if(data === "error: category not found"){
-                resultsTable.innerHTML = `<tr><td colspan="2" style="color: red; font-size: 1.5em;">No criteria found</td></tr>`;
+                resultsTable.innerHTML = `<tr><td colspan="2" style="color: red; font-size: 1.5em;">No category found!</td></tr>`;
                 return;
             }else if (data.length === 0){
                 resultsTable.innerHTML = `<tr><td colspan="2">No results found</td></tr>`;
