Updated table background

--- a/templates/pyshow.html
+++ b/templates/pyshow.html
@@ -302,7 +302,7 @@
         <div class="centered-content-result">
             <h2>Results using <span id ="selectedSort"></span> sort</h2>
             <h3><span id="selectedLevel"></span> <span id="selectedCriteria"></span> <span id="selectedCategory"></span> at <span id="selectedRestaurant"></span> </h3>
-            <table>
+            <table style="background-color: #203162;">
                 <thead>
                     <tr>
                         <th>Food Item</th>
